<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.m.k.mvp.widgets.MatchScrollParentCLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <EditText
            android:id="@+id/auth_code_login_edt_count"
            style="@style/JianDao.EditInput"
            android:text="13289502833"
            app:layout_constraintBottom_toTopOf="@+id/image3"
            tools:ignore="MissingConstraints"
            android:hint="@string/text_phone" />
        <!--线：   各个版本的EditText 不一样-->

        <ImageView
            android:id="@+id/image3"
            style="@style/JianDao.horizontal_Line"
            android:layout_marginStart="43dp"
            android:layout_marginTop="218dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            tools:ignore="MissingConstraints"
            android:id="@+id/auth_code_login_edt_code"
            android:hint="@string/text_code"
            style="@style/JianDao.EditInput"
            app:layout_constraintBottom_toTopOf="@+id/image4"
            />
        <ImageView
            android:id="@+id/image4"
            style="@style/JianDao.horizontal_Line"
            android:layout_marginStart="43dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="43dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/image3" />

        <com.m.k.mvp.widgets.EditTextButton
            android:id="@+id/auth_code_login_btn_login"
            style="@style/JianDao.Button_style1"
            android:layout_marginTop="50dp"
            android:text="@string/text_login"
            app:layout_constraintEnd_toEndOf="@+id/auth_code_login_edt_code"
            app:layout_constraintStart_toStartOf="@+id/auth_code_login_edt_code"
            app:layout_constraintTop_toBottomOf="@+id/image4" />
        <TextView
            android:id="@+id/auth_code_login_tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_get_code"
            app:layout_constraintBottom_toBottomOf="@+id/auth_code_login_edt_code"
            app:layout_constraintEnd_toEndOf="@+id/auth_code_login_edt_code"
            app:layout_constraintTop_toTopOf="@+id/auth_code_login_edt_code" />
        <com.m.k.mvp.widgets.CleanEditButton
            android:id="@+id/auth_code_login_iv_clean_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/auth_code_login_edt_count"
            app:layout_constraintEnd_toEndOf="@id/auth_code_login_edt_count"
            app:layout_constraintTop_toTopOf="@id/auth_code_login_edt_count"
            android:background="@drawable/ic_clean"
            />

        <TextView
            android:id="@+id/auth_code_login_tv_login_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="密码登录"
            app:layout_constraintStart_toStartOf="@+id/auth_code_login_edt_code"
            app:layout_constraintTop_toBottomOf="@+id/auth_code_login_btn_login" />

        <TextView
            android:id="@+id/auth_code_login_tv_register_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="立即注册"
            app:layout_constraintEnd_toEndOf="@+id/auth_code_login_edt_code"
            app:layout_constraintTop_toTopOf="@+id/auth_code_login_tv_login_view" />

        <TextView
            android:id="@+id/auth_code_login_tv"
            android:layout_width="300dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toTopOf="@+id/auth_code_login_btn_login"
            app:layout_constraintStart_toStartOf="@+id/auth_code_login_edt_code"
            app:layout_constraintTop_toBottomOf="@+id/auth_code_login_edt_code" />
        <View
            android:id="@+id/anchor"
            app:layout_constraintTop_toBottomOf="@id/auth_code_login_tv_login_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <include layout="@layout/part_layout_uesr_common"/>


    </com.m.k.mvp.widgets.MatchScrollParentCLayout>

</ScrollView>