<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.m.k.mvp.widgets.MatchScrollParentCLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <EditText
            android:id="@+id/auth_password_login_edt_count"
            style="@style/JianDao.EditInput"
            android:text="18610306473"
            app:layout_constraintBottom_toTopOf="@+id/image1"
            tools:ignore="MissingConstraints"
            android:hint="@string/text_phone" />
        <!--线：   各个版本的EditText 不一样-->

        <ImageView
            android:id="@+id/image1"
            style="@style/JianDao.horizontal_Line"
            android:layout_marginStart="43dp"
            android:layout_marginTop="218dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/auth_password_login_edt_password"
            android:hint="@string/text_password"
            style="@style/JianDao.EditInput"
            android:text="123456"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/image2"
            />
        <ImageView
            android:id="@+id/image2"
            style="@style/JianDao.horizontal_Line"
            android:layout_marginStart="43dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="43dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/image1" />

        <com.m.k.mvp.widgets.EditTextButton
            android:id="@+id/auth_password_login_btn_login"
            style="@style/JianDao.Button_style1"
            android:layout_marginTop="30dp"
            android:text="@string/text_login"
            app:layout_constraintEnd_toEndOf="@+id/auth_password_login_edt_password"
            app:layout_constraintStart_toStartOf="@+id/auth_password_login_edt_password"
            app:layout_constraintTop_toBottomOf="@+id/image2" />
        <com.m.k.mvp.widgets.CleanEditButton
            android:id="@+id/auth_password_login_iv_clean_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/auth_password_login_edt_count"
            app:layout_constraintEnd_toEndOf="@id/auth_password_login_edt_count"
            app:layout_constraintTop_toTopOf="@id/auth_password_login_edt_count"
            android:background="@drawable/ic_clean"
            />
        <com.m.k.mvp.widgets.CleanEditButton
            android:id="@+id/auth_password_login_iv_clean_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/auth_password_login_edt_password"
            app:layout_constraintEnd_toEndOf="@id/auth_password_login_edt_password"
            app:layout_constraintTop_toTopOf="@id/auth_password_login_edt_password"
            android:background="@drawable/ic_clean"
            />

        <com.m.k.mvp.widgets.TogglePasswordButton
            android:id="@+id/auth_password_login_iv_toggle_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/auth_password_login_iv_clean_password"
            app:layout_constraintEnd_toStartOf="@+id/auth_password_login_iv_clean_password"
            app:layout_constraintTop_toTopOf="@+id/auth_password_login_iv_clean_password"
            android:background="@drawable/ic_eyes_close" />
        <TextView
            android:id="@+id/auth_password_login_tv_code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="验证码登录"
            app:layout_constraintStart_toStartOf="@+id/auth_password_login_edt_password"
            app:layout_constraintTop_toBottomOf="@+id/auth_password_login_btn_login" />

        <TextView
            android:id="@+id/auth_password_login_tv_register_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="立即注册"
            app:layout_constraintEnd_toEndOf="@+id/auth_password_login_edt_password"
            app:layout_constraintTop_toTopOf="@+id/auth_password_login_tv_code_view" />
        <View
            android:id="@+id/anchor"
            app:layout_constraintTop_toBottomOf="@id/auth_password_login_tv_code_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            />
        <!--include    包括-->
        <include layout="@layout/part_layout_uesr_common"/>
    </com.m.k.mvp.widgets.MatchScrollParentCLayout>
</ScrollView>
